<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
		<string name="app_name">ChatSecure</string>
		<string name="im_label">ChatSecure</string>
		<string name="app_description">ChatSecure is a free, unlimited, private messaging app that based on open standards.  Unlike other apps that keep you stuck in their walled garden, ChatSecure is fully interoperable with other clients that support OTR and XMPP, such as Adium, Jitsi, and more.  You can connect using your DuckDuckGo and Google accounts, create new accounts on public XMPP servers (including via Tor), or even connect to your own server for extra security.</string>
		<string name="ro_perm_label">read instant messages</string>
		<string name="ro_perm_desc">Allows applications to read data from the IM content provider.</string>
		<string name="wo_perm_label">write instant messages</string>
		<string name="wo_perm_desc">Allows applications to write data to the IM content provider.</string>
		<string name="perm_label">start IM service</string>
		<string name="perm_desc">Allows applications to start IM service via intent.</string>
		<string name="confirm">Confirm</string>
		<string name="ok">OK</string>
		<string name="cancel">Cancel</string>
		<string name="yes">OK</string>
		<string name="no">Cancel</string>
		<string name="btn_next">Next</string>
		<string name="btn_back">Back</string>
		<string name="connect">Connect</string>
		<string name="play">Play</string>
		<string name="setup">Setup</string>
		<string name="lock_screen_open">Open</string>
		<string name="title_activity_lock_screen">ChatSecure Locked</string>
		<string name="lock_screen_create_passphrase">Set Password</string>
		<string name="lock_screen_confirm_passphrase">Confirm Password</string>
		<string name="lock_screen_passphrase_hint">Password</string>
		<string name="lock_screen_passphrase_not_set_enter">You can optionally set a master password for ChatSecure to prevent access to your contacts and messages without a password:</string>
		<string name="lock_screen_passphrase_not_set_confirm">Confirm New Password</string>
		<string name="lock_screen_passphrases_not_matching">Password did not match, please try again</string>
		<string name="lock_screen_skip">Skip &gt;&gt;</string>
		<string name="app_passphrase_view_title_dialog">Information Prompt</string>
		<string name="app_passphrase_view_password_question">Enter Password Please</string>
		<string name="password_please">Password please…</string>
		<string name="passphrase">Passphrase</string>
		<string name="passphrase_again">Passphrase (again)</string>
		<string name="landing_page_title">Select an account</string>
		<string name="choose_account_title">Select an account</string>
		<string name="conversations">(<xliff:g id="number" example="27">%1$d</xliff:g>)</string>
		<string name="add_account">Add <xliff:g id="account">%1$s</xliff:g> account</string>
		<string name="menu_about">About</string>
		<string name="menu_sign_out_all">Sign out all</string>
		<string name="signout_all_confirm_message">Do you want to sign out all services?</string>
		<string name="signed_out_prompt">You have been signed out of <xliff:g id="account">%1$s</xliff:g>.</string>
		<string name="signed_out_prompt_with_error">You have been signed out of <xliff:g id="account">%1$s</xliff:g> because <xliff:g id="reason">%2$s</xliff:g></string>
		<string name="welcome_first">First time using ChatSecure?</string>
		<string name="welcome_skip">Can\'t wait to get started?</string>
		<string name="welcome_about">Get Started</string>
		<string name="welcome_account">Account Setup</string>
		<string name="setup_passphrase_title">Passphrase Setup</string>
		<string name="setup_passphrase">Before you get started please choose a secure passphrase to protect your ChatSecure data from unjust access.</string>
		<string name="setup_passphrase_label1">Passphrase:</string>
		<string name="setup_passphrase_label2">Passphrase (again):</string>
		<string name="rekey_message">Enter a *new* passphrase. It must contain at least one uppercase, one lowercase and one number, and be longer than six characters.</string>
		<string name="do_rekey">Encrypting your existing notes with the new passphrase (patience…)</string>
		<string name="enter_pass">Enter your passphrase:</string>
		<string name="new_pass">Welcome! Enter a strong passphrase to secure your notes. It must contain at least one uppercase, one lowercase and one number, and be longer than six characters.</string>
		<string name="pass_err_length">Your passphrase was not long enough</string>
		<string name="pass_err_upper">Your passphrase did not contain any uppercase letters</string>
		<string name="pass_err_lower">Your passphrase did not contain any lowercase letters</string>
		<string name="pass_err_num">Your passphrase did not contain any numbers</string>
		<string name="about_welcome_title">About ChatSecure</string>
		<string name="about_welcome">ChatSecure is a mobile instant messaging app that provides extra security features that prevent others from snooping on your conversations and communications.\n\nThe app supports any chat service that uses the Jabber or XMPP protocol, such as Google GTalk or Jabber.org.</string>
		<string name="about_otr_title">How is it secure?</string>
		<string name="about_otr">\'Off-the-Record Messaging\' is a security system designed to enable privacy by mimicking the characteristics of a private conversation in the real world, including Encryption, Authentication, Deniability and Forward Secrecy.\n\nThe OTR-protocol is compatible with desktop chat clients such as Adium or Pidgin.</string>
		<string name="about_security_title">Are My Chats Secure?</string>
		<string name="about_security">ChatSecure\'s chat encryption feature only works when messaging with others using a compatible app or program, so you should ensure your contacts are using ChatSecure for mobile and Adium or Pidgin for the desktop. You can fine-tune exactly how and when ChatSecure attempts to encrypt your chats in Account Settings.\n\nLet\'s get started!</string>
		<string name="menu_new_account">New Account</string>
		<string name="menu_add_account">Add Account</string>
		<string name="menu_edit_account">Edit Account</string>
		<string name="menu_remove_account">Remove Account</string>
		<string name="menu_use_existing_account">Existing Account</string>
		<string name="label_username">User@Host</string>
		<string name="label_password">Password:</string>
		<string name="remember_password">Remember my password.</string>
		<string name="keep_me_signed_in">Sign me in automatically.</string>
		<string name="sign_up">Don\u2019t have an account?</string>
		<string name="sign_in">Sign in</string>
		<string name="check_save_password">For your security, if your phone is lost or stolen, go to the Web site on your computer and change your password.</string>
		<string name="check_auto_sign_in">This option automatically signs you in every time you open this application. To disable the option, sign out, then clear the \"Sign me in automatically\" check box.</string>
		<string name="use_tor">Connect via Tor (Requires Orbot app)</string>
		<string name="account_setup_example_email_address">user@domain</string>
		<string name="account_setup_new_username">new username</string>
		<string name="account_setup_service_provider">service provider (dukgo.com, jabber.ccc.de)</string>
		<string name="account_setup_password">password</string>
		<string name="account_setup_password_confirm">confirm password</string>
		<string name="account_setup_advanced_button">Advanced Account Settings</string>
		<string name="account_select_type">Account Setup</string>
		<string name="btn_create_new_account">Register Account</string>
		<string name="account_setup_pers_sub">Persistence</string>
		<string name="account_setup_pers_pw_title">Remember Password</string>
		<string name="account_setup_pers_pw_on">Password cached</string>
		<string name="account_setup_pers_pw_off">Password not cached</string>
		<string name="account_setup_pers_auto_title">Automatically Sign In</string>
		<string name="account_setup_pers_auto_on">Connect at ChatSecure start-up</string>
		<string name="select_domain_new_account">Chat service domain</string>
		<string name="do_srv_lookup">Do SRV Lookup</string>
		<string name="use_dns_srv_to_find_actual_xmpp_server_from_domain_name">Use DNS SRV to find actual XMPP server from domain name</string>
		<string name="allow_the_username_and_password_to_be_sent_as_plain_text_when_using_an_unencrypted_transport">Allow the username and password to be sent as plain text when using an unencrypted transport</string>
		<string name="allow_plain_text_auth">Allow Plain Text Auth</string>
		<string name="require_tls_ssl_connection">Require TLS Connection</string>
		<string name="transport_encryption">Transport Encryption</string>
		<string name="how_encrypted_chats_are_started">how encrypted chats are started</string>
		<string name="the_server_to_connect_to_if_needed">The server to connect to, if needed</string>
		<string name="connect_server">Connect Server</string>
		<string name="tcp_port_for_xmpp_server">TCP Port for XMPP Server</string>
		<string name="server_port">Server Port</string>
		<string name="xmpp_resource">XMPP Resource</string>
		<string name="to_distinguish_this_connection_from_other_clients_that_are_also_logged_in">to distinguish this connection from other clients that are also logged in</string>
		<string name="xmpp_resource_prio_title">XMPP Resource Priority</string>
		<string name="xmpp_resource_prio_summary">Messages to clients with multiple active resources will be sent to the resource with the highest priority</string>
		<string name="choose_list_label">Account to add to:</string>
		<string name="smp_question_summary">Enter a question to send to your contact, and the answer you expect them to give, in order to verify they are who they claim to be.</string>
		<string name="smp_question_hint">the question to ask</string>
		<string name="qmp_answer_hint">the expected answer</string>
		<string name="encryption_and_anonymity_title">Encryption and Anonymity</string>
        <string name="media_store_file_missing_title">Chat Media Store Missing</string>
        <string name="media_store_file_missing_message">Your chat logs are stored on the SD Card, but the file is missing from the current SD Card.  Please insert the correct SD Card, or delete the existing chat log and launch ChatSecure again.</string>
        <string name="delete_chat_log">Delete Chat Log</string>
	<string name="account_settings_title">Account Settings</string>
	<string name="menu_exit">Shutdown &amp; Lock</string>
	<string name="menu_sidebar_qr">Display Your Fingerprint</string>
		<string name="muc_dialog_nickname">nickname to use in room</string>
		<string name="muc_dialog_room">name of room to create or join"</string>
		<string name="muc_dialog_server">groupchat server (conference.foo.com)</string>
    <string name="button_install_app">Install App</string>
    <string name="button_learn_more">Learn More</string>
    <string name="large_text">
        "Thanks for being a part of the ChatSecure Android community. We are not actively developing this app anymore, but will continue to fix any critical bugs.\n\nWe are excited to share some great active apps that continue our mission of privacy and security..."
    </string>
    <string name="app_zom_title">Zom Mobile Messenger</string>
    <string name="app_zom_desc">Zom is built by the ChatSecure team, and makes it quick &amp; easy for users to connect without a phone number, central servers or requiring any personal data. Zom is also available for iPhones and iPads.</string>
	<string name="app_convo_title">Conversations</string>
	<string name="app_convo_desc">Conversations is the best modern open-source, standards-compliant mobile XMPP client. It is lightweight and supports the OMEMO advanced encryption protocol. Great for advanced users.</string>
</resources>