<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/acct_act_scrollview"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:fillViewport="true"
	android:background="?listBackground"
	>
			
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" android:layout_gravity="fill_vertical">
	
	    <EditText android:id="@+id/edtName"
	        android:selectAllOnFocus="true"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
 	        android:hint="@string/account_setup_example_email_address"
	        android:autoLink="none"
	        android:cursorVisible="true"
	        android:inputType="textEmailAddress"/>
	
	    <info.guardianproject.otr.app.im.ui.InstantAutoCompleteTextView android:id="@+id/spinnerDomains"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:drawSelectorOnTop="true"
		    android:visibility="gone"
		    android:hint="@string/select_domain_new_account"
		    android:completionThreshold="1"
		/>
	    
	    <EditText android:id="@+id/edtPass"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/account_setup_password"
	        android:selectAllOnFocus="true" android:inputType="textPassword"/>
	    
	      <EditText android:id="@+id/edtPassConfirm"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/account_setup_password_confirm"
	        android:visibility="gone"
	        android:selectAllOnFocus="true" android:inputType="textPassword"/>
	    
	      
		<Button android:id="@+id/btnSignIn"
			android:text="@string/sign_in"
			android:background="@drawable/btn_green"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dip"
			android:layout_width="match_parent"
			android:layout_gravity="bottom" 
			style="@style/btn_white"
			/>
		
	    <LinearLayout 	    android:orientation="vertical"
	       android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="20dip"></LinearLayout>
	    
	    
	    
	    <CheckBox android:id="@+id/rememberPassword"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:text="@string/remember_password"
	android:checked="true"
	android:paddingTop="3sp"
	android:paddingBottom="3sp"
	android:textAppearance="?android:attr/textAppearanceSmall"
	
	 />
	
	  <CheckBox android:id="@+id/useTor"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/use_tor"
	
	android:paddingTop="3sp"
	android:paddingBottom="3sp"
	
	   android:textAppearance="?android:attr/textAppearanceSmall"
	
	         />
	
	  <Button android:id="@+id/btnAdvanced"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="20dip"
	                android:text="@string/account_setup_advanced_button" android:layout_width="match_parent"/>
		  <Button android:id="@+id/btnQR"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="3dip"
	                android:text="@string/menu_sidebar_qr" android:layout_width="match_parent"
	                			android:visibility="gone"
	                
	                />
	  
	  
	 
	                <!-- 
	    <TextView android:id="@+id/signUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="4dip"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	         -->
	
	</LinearLayout>
</ScrollView>
