<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/holo_red_dark" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@color/background_floating_material_light"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/media_store_file_missing_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/message"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/media_store_file_missing_message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/delete_chat_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/delete_chat_log" />

            <Button
                android:id="@+id/shutdown_and_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/menu_exit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>